# oxpilot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  cmd.rs  lib.rs  llm.rs  main.rs  process.rs  state.rs  token.rs  types.rs
src/routes/: completion.rs  mod.rs
src/utils/: commit.rs  diff.rs  mistral.rs  mod.rs  spinner.rs
