[package]
name = "oxpilot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
hf-hub = { version = "0.3.1", features = ["tokio"] }
tokenizers = "0.15.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
anyhow = "1.0"
dirs = "5.0.1"
axum = "0.7.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
async-stream = "0.3.5"
futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.5.0"
eventsource-stream = "0.2.3"
