[package]
name = "oxpilot"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/chenhunghan/oxpilot/"

[[bin]]
# https://github.com/rust-lang/cargo/pull/9627/files#diff-e35cef716988e9f7122a9c90479aa9204e61d1f41b094c0d183a44e0ca271eaa
name = "ox"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
hf-hub = { version = "0.3.1", features = ["tokio"] }
tokenizers = "0.15.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
anyhow = "1.0"
dirs = "5.0.1"
axum = "0.7.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
async-stream = "0.3.5"
futures = "0.3.29"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"
clap = { version = "4.4.11", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.1.0"
spinoff = "0.8.0"
regex = "1.10.2"
inquire = "0.6.2"

[dev-dependencies]
reqwest = { version = "0.11.22", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.5.0"
eventsource-stream = "0.2.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.5.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "chenhunghan/homebrew-formulae"
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
